uno de los ultimos

--- a/PI-Dogs-main/client/src/Pages/LandingPage/LandingPage.module.css
+++ b/PI-Dogs-main/client/src/Pages/LandingPage/LandingPage.module.css
@@ -1,5 +1,5 @@
 .fondo {
-    margin: 0;
+   
     padding: 0;
     background-image: url("../../Assets/Images/background-1.jpg");
    
@@ -10,6 +10,7 @@
     position: relative;
     overflow: hidden;
     margin: -8px;
+    margin-bottom: -27px;
 }
 
 .fondo .background{
