--- a/PI-Dogs-main/client/src/Components/SearchBar/SearchBar.module.css
+++ b/PI-Dogs-main/client/src/Components/SearchBar/SearchBar.module.css
@@ -1,3 +1,12 @@
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    padding-top: 100px;
+  }
+
+
 .input{
     margin-top: 8px;
     text-align: center;
